--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
         <nav class="navbar navbar-dark navbar-expand-lg py-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center">
-                <img src="img/image copy 2.png" width="50px" height="50px" class="me-2">
+                <img src="image copy 2.png" width="50px" height="50px" class="me-2">
                 Gig Groove Hub
             </a>
             <button 
@@ -124,7 +124,7 @@
         <div class="carousel-inner">
             <!-- Slide 1 -->
             <div class="carousel-item active">
-                <img src="img/image copy.png" class="d-block w-100 img-fluid" alt="First slide">
+                <img src="image copy.png" class="d-block w-100 img-fluid" alt="First slide">
                 <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
                     <h6 class="text-secondary h4 animated fadeInUp mb-3">Best IT Solutions</h6>
                     <h1 class="text-white display-4 fw-bold mb-4 animated fadeInRight">Gig Groove Hub</h1>
@@ -136,7 +136,7 @@
 
             <!-- Slide 2 -->
             <div class="carousel-item">
-                <img src="img/image.png" class="d-block w-100 img-fluid" alt="Second slide">
+                <img src="image.png" class="d-block w-100 img-fluid" alt="Second slide">
                 <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
                     <h6 class="text-secondary h4 animated fadeInUp mb-3">Best IT Solutions</h6>
                     <h1 class="text-white display-4 fw-bold mb-4 animated fadeInLeft">Quality Digital Services You Really Need!</h1>
@@ -204,7 +204,7 @@
                     <!-- Main Image -->
      
                     <!-- Overlay Image -->
-                    <img src="img/image copy 2.png" class="img-fluid rounded position-absolute" 
+                    <img src="image copy 2.png" class="img-fluid rounded position-absolute" 
                          style="top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60%;" alt="Overlay Image">
                 </div>
             </div>
@@ -325,7 +325,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/img1.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="img1.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Fire Web Based System</h4>
@@ -338,7 +338,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/img2.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="img2.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Barangay Management</h4>
@@ -351,7 +351,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/img4.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="img4.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Pet Tracker</h4>
@@ -364,7 +364,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/img5.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="img5.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Scholarship Management</h4>
@@ -377,7 +377,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/image copy 4.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="image copy 4.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">POS</h4>
@@ -390,7 +390,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/image copy 5.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="image copy 5.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">E-Commerce</h4>
@@ -404,7 +404,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/image copy 11.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="image copy 11.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Alumni Management</h4>
@@ -418,7 +418,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/image copy 12.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="image copy 12.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">QR Code Attendance</h4>
@@ -432,7 +432,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/Screenshot 2024-12-09 at 1.51.16 PM.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="Screenshot 2024-12-09 at 1.51.16 PM.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Pet Online Store</h4>
@@ -461,7 +461,7 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="img/d99b6a00-b7bf-45e4-9e49-fa50c6a53c3f.jpeg" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="d99b6a00-b7bf-45e4-9e49-fa50c6a53c3f.jpeg" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
                             <h4>Carl Kelvin Manahan</h4>
@@ -474,7 +474,7 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="img/image copy 9.png" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="image copy 9.png" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
                             <h4>Dexter Sumalde</h4>
@@ -487,7 +487,7 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="img/image copy 10.png" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="image copy 10.png" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
                             <h4>Trisha Rodrigo</h4>
@@ -500,7 +500,7 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="img/Multicolor Floral Watercolor Illustrated A4 Document (2).png" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="Multicolor Floral Watercolor Illustrated A4 Document (2).png" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
                             <h4>Zyrilyn Castel</h4>
@@ -513,7 +513,7 @@
                 <div class="team-content">
                     <div class="team-img-icon">
                         <div class="team-img rounded-circle">
-                            <img src="img/Multicolor Floral Watercolor Illustrated A4 Document (3).png" class="img-fluid w-100 rounded-circle" alt="">
+                            <img src="Multicolor Floral Watercolor Illustrated A4 Document (3).png" class="img-fluid w-100 rounded-circle" alt="">
                         </div>
                         <div class="team-name text-center py-3">
                             <h4>Joshua Pilar</h4>
@@ -538,7 +538,7 @@
                     <div class="testimonial-item border p-4">
                         <div class="d-flex align-items-center">
                             <div class="">
-                                <img src="img/image copy 13.png" alt="">
+                                <img src="image copy 13.png" alt="">
                             </div>
                             <div class="ms-4">
                                 <h4 class="text-black">Florian Castañeda</h4>
@@ -559,7 +559,7 @@
                     <div class="testimonial-item border p-4">
                         <div class=" d-flex align-items-center">
                             <div class="">
-                                <img src="img/image copy 14.png" alt="">
+                                <img src="image copy 14.png" alt="">
                             </div>
                             <div class="ms-4">
                                 <h4 class="text-black">John Elmar Mercurio</h4>
@@ -580,7 +580,7 @@
                     <div class="testimonial-item border p-4">
                         <div class=" d-flex align-items-center">
                             <div class="">
-                                <img src="img/image copy 15.png" alt="">
+                                <img src="image copy 15.png" alt="">
                             </div>
                             <div class="ms-4">
                                 <h4 class="text-black">Mae Ibong</h4>
@@ -601,7 +601,7 @@
                     <div class="testimonial-item border p-4">
                         <div class=" d-flex align-items-center">
                             <div class="">
-                                <img src="img/image copy 16.png" alt="">
+                                <img src="image copy 16.png" alt="">
                             </div>
                             <div class="ms-4">
                                 <h4 class="text-black">James Duray</h4>
