--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="Screenshot 2024-12-09 at 1.51.16 PM.png" class="img-fluid w-100 rounded" alt="">
+                                <img src="pet.png" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-white">Pet Online Store</h4>
